# RAG

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
notebook/: document.md  pdf_loader.md
src/: app.py  data_loader.py  embedding.py  search.py  vector_store.py
src/rag/: config.py  data_ingestion.py  data_preprocessing.py  logging_config.py  prompts.py  rag_search.py  vector_store.py
